2008-02-15  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated licence, now this branch is like trunk, GPL V3 and above

	* src/babymatch-activity/shapegame.c: (key_press), (process_ok),
	(shapegame_init_canvas), (item_event), (item_event_ok): Added a continue button
	that appear once the


2008-02-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Merged from GCompris trunk 3238:
	* src/boards/python/mosaic.py: fixed a major bug. this activity was making GCompris
	  crash one you clicked on the grey target button.

2007-10-16  Bruno coudoin  <bruno.coudoin@free.fr>

	Quick hack to add a goocanvas svg item and test it in GCompris.
	the svg-item.c has been made by Damon Chaplin damon on karuna eclipse co uk.

	* boards/Makefile.am:
	* boards/skins/babytoy/help_bg.svg:
	* configure.in:
	* src/gcompris/about.c: (gc_about_start):
	* src/gcompris/dialog.c: (gc_dialog):
	* src/gcompris/gcompris.c: (main):
	* src/gcompris/gcompris_confirm.c: (display_confirm):
	* src/gcompris/help.c: (gc_help_start):
	* src/goocanvas/src/Makefile.am:
	* src/goocanvas/src/Makefile.in:
	* src/goocanvas/src/goocanvas.h:
	* src/goocanvas/src/svg-item.c: (goo_svg_item_init),
	(goo_svg_item_new), (goo_svg_item_update), (goo_svg_item_paint),
	(goo_svg_item_is_item_at), (goo_svg_item_class_init):
	* src/goocanvas/src/svg-item.h:

2007-10-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added a little hack to avoid missing symbols from libgnomecanvas
	  at plugin load time. (merge from trunk 3060)

	* src/gcompris/gcompris.c: (main):

2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- The sugar dbus API uses Setactive instead of set_active.

	* src/gcompris/dbus.c: (_SetActive), (gc_dbus_init):

2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Merge of commit trunk 3038, now compile out of tree.
	* src/*/Makefile.am


2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Removed require on gtk-pixbuf as it's already required by GTK.
	  merged from trunk 3006
	* configure.in
