@@ -1079,6 +1079,15 @@ static void load_properties ()
   else
     g_message("Binary relocation disabled");
 
+  /* usefull for OSX bundle app */
+  /* FIXME exec_prefix should be put in properties */
+#ifdef NSBUNDLE
+  exec_prefix = gcompris_nsbundle_resource ();
+#else
+  exec_prefix = gbr_find_exe_dir("");
+#endif
+  g_warning("exec_prefix %s\n", exec_prefix);
+
   {
     gchar *pkg_data_dir = gbr_find_data_dir(PACKAGE_DATA_DIR);
     gchar *pkg_clib_dir = gbr_find_lib_dir(PACKAGE_CLIB_DIR);
@@ -1277,15 +1286,6 @@ main (int argc, char *argv[])
 {
   GError *error = NULL;
   GOptionContext *context;
-
-  /* usefull for OSX bundle app */
-#ifdef NSBUNDLE
-  exec_prefix = gcompris_nsbundle_resource ();
-  printf("exec_prefix %s\n", exec_prefix);
-#else
-  exec_prefix = NULL;
-  printf("exec_prefix NULL\n");
-#endif
 
   /* First, Remove the gnome crash dialog because it locks the user when in full screen */
   signal(SIGSEGV, gc_terminate);
